# benge_freecad_project

./: .gitignore  AGENTS.md  README.md  config.py  drawing_annotations.py  model.py  opencode.jsonc  pyproject.toml  start.sh
.agents/agents/: cad-compatibility-verifier.md  file-artifact-reviewer.md  file-design-maintainer.md
.agents/skills/file-design-maintainer/: SKILL.md
.github/workflows/: build-design.yml  ci.yml  opencode.yml  pages.yml  test-ci.yml
.opencode/tools/: specrepo-autocommit.js  specrepo-autocommit.py
.tools/: install.py  manifest.json  update_tools.py
.tools/templates/project/: AGENTS.md  README.md
Agents_backup/: AGENTS.md  bk_opencode.jsonc
Agents_backup/benge-property-cad-agent-bundle/: AGENTS.md  README.md
agent/.agents/agents/: cad-compatibility-verifier.md  file-artifact-reviewer.md  file-design-maintainer.md  save.md
agent/.agents/skills/file-artifact-reviewer/: SKILL.md
agent/.opencode/commands/: autocommit.md
agent/.opencode/tools/: start-ui.js
docs/migration/: 03-identity-boundary-report.md  04-model-annotations-report.md  10-compatibility-report.json  10-published-prerelease-report.md  11-compatibility-report.json  11-stable-pages-report.md
project_tests/: test_benge_project.py  test_drawing_annotations.py
tests/: conftest.py  test_build_end_to_end.py  test_config_contract.py  test_drawing_annotations.py  test_model_contract.py  test_model_design_changes.py  test_model_geometry.py  test_viewer_e2e.py  test_workflow_policy.py  verify_model_contract_v1.py
tests/fixtures/: model_contract_v1.json
viewer/: README.md
(+9 files in other folders)
